<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/layoutBackground">

    <ImageView
        android:id="@+id/loginlogo"
        android:src="@drawable/splashlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/logo_splash" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loginlogo"
        android:ems="10"
        android:hint="@string/email"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="8dp"
        android:inputType="textEmailSubject"
        android:drawableStart="@drawable/icon_email"
        android:autofillHints="@string/email" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etEmail"
        android:ems="10"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/icon_password"
        android:autofillHints="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnLogin"
        android:textColor="@color/layoutBackground" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignEnd="@id/etPassword"
        android:layout_marginStart="214dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnRegister"
        android:textColor="@color/layoutBackground" />


</RelativeLayout>